Update pics for system with friction

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -16,7 +16,7 @@
 Относительная разница в начальном значении переменной состояния $x_0$
 составляет~$1\times 10^{-8}$.
 
-\begin{figure}[h!]
+\begin{figure}[htb!]
   \centerline{
     \includegraphics[width=0.49\textwidth]{p/lor_diff-p_xx_x0.png}
     \hfill
@@ -194,7 +194,7 @@
 \Cmt{Electro-magnetic -- $x\cdot y$}.
 
 
-Обобщая вышеизложенное, можно сделать выводы, что
+Обобщая вышеизложенное, можно сделать вывод, что
 несмотря на разнообразие физических процессов, количество способов
 представления энергии (рассматриваем сосредоточенные параметры)
 весьма ограничено. Основные виды зависимостей:
