--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -409,7 +409,7 @@ $I_i(t)$ --- потребляемый им ток.
 
 \end{itemize}
 
-Внешний вид собранной схемы на макетной плате представлен на~(рис.~\ref{atu:f:relax3d_board}).
+Внешний вид собранной электрической схемы на макетной плате представлен на рис.~\ref{atu:f:relax3d_board}.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3d_board.jpg} }
@@ -750,7 +750,7 @@ $V\Tidx{on,3}  = \SI{1.81}{\volt}$.
 
 Данную схемотехническую реализацию в дальнейшем будем обозначать как ``relax3ds''.
 
-Внешний вид собранной схеме на макетной плате представлен на~(рис.~\ref{atu:f:relax3ds_board})
+Внешний вид собранной схеме на макетной плате представлен на рис.~\ref{atu:f:relax3ds_board}.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_board.jpg} }
