Conclusions for system with friction.

--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -122,7 +122,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 что уровень шумов позволяет создать фильтр, позволяющий отсеивать шумы
 за (как максимум) характерное время реакции системы.
 После фильтра действует реальное дифференцирующее звено.
-Соответствующий вид критерия обозначим как $ q_{dx} $ (рис.~\ref{atu:f:fric_q}).
+Соответствующий вид критерия обозначим как $ q_\mathrm{dx} $ (рис.~\ref{atu:f:fric_q}).
 
 
 
@@ -130,7 +130,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 \centerline{
   \includegraphics[width=0.60\textwidth]{p/cha/fric/fric_q-p_f_dm_q.png}
 }
-  \caption{Зависимость $q_{dx}(f_{dm})$ для системы (\ref{atu:eq:dryfric_sys}) }
+  \caption{Зависимость $q_\mathrm{dx}(f_{dm})$ для системы (\ref{atu:eq:dryfric_sys}) }
 \label{atu:f:fric_q}
 \end{figure}
 
@@ -168,7 +168,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
 
 Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys})
-с использованием группы методов ql3rlWvnAAW.$q_{dx}$
+с использованием группы методов ql3rlWvnAAW.$q_\mathrm{dx}$
 при условии (\ref{atu:eq:fric_po_t_sign})
 представлена на рис.~\ref{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}.
 
@@ -179,7 +179,7 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_t_p_ql3rlWvnAAW_sign.png}
   }
-  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$ при условии~(\ref{atu:eq:fric_po_t_sign})}
+  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$ при условии~(\ref{atu:eq:fric_po_t_sign})}
   \label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sign}
 \end{figure}
 
@@ -205,7 +205,7 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_t_p_ql3rlWvnAAW_sin.png}
   }
-  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$ при условии~(\ref{atu:eq:fric_po_t_sin})}
+  \caption{Процесс идентификации параметра ``$f_{dm}$'' системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$ при условии~(\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_id_ql3rlWvnAAW_q_dx_sin}
 \end{figure}
 
@@ -230,7 +230,15 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
 
 
 Зависимости $\overline{e_*}(a_q)$ (рис.~\ref{atu:f:fric_a_q_ql3rlWvnAAW_q_dx})
- позволяют определить корректное время усреденения критерия.
+позволяют определить корректное время усреденения критерия.
+Меньшее оптимальное (в смысле минимума ошибки) значение
+для плавно меняющегося значения параметра является ожидаемым явлением.
+Отличительной особенностью данной системы является то,
+что минимальную ошибку идентификации позволяет достичь метод
+$p_{ge}$ координатора поиска, а метод $p_{le}$,
+обычно показывающий лучшие результаты,
+находится на втором месте.
+% TODO: why?
 
 \begin{figure}[htb!]
   \centerline{
@@ -238,7 +246,7 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_a_q_sin.png}
   }
-  \caption{Зависимости $\overline{e}(a_q)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$
+  \caption{Зависимости $\overline{e}(a_q)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
    при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_a_q_ql3rlWvnAAW_q_dx}
 \end{figure}
@@ -247,11 +255,7 @@ $p_0 = 0.7$, $U_p=0.4$, $\omega_p=0.0104719755$.
 Зависимость ошибок идентификации от величины коэффициента масштаба
 $q_\gamma$
 (рис.~\ref{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx})
-достаточно сильно отличатся от аналогичной, например, для системы ``Sprott A''.
-% На ней явно выражены
-%экстремумы, дающие возможность тонкой настройки системы идентификации.
-Следовательно,
-дополнительная адаптация может заметно улучшить качество идентификации.
+достаточно сильно отличатся от аналогичных для других систем.
 
 \begin{figure}[htb!]
   \centerline{
@@ -259,13 +263,30 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_q_gamma_sin.png}
   }
-  \caption{Зависимости $\overline{e}(q_\gamma)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$
+  \caption{Зависимости $\overline{e}(q_\gamma)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
    при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_q_gamma_ql3rlWvnAAW_q_dx}
 \end{figure}
 
+При скачкообразно изменяющемся параметре
+нет характерного роста ошибки при избыточной чувствительности
+(в ограниченных пределах). При этом существует явное разделение между
+результатами работы методов координатора поиска.
+Методы, использующие значения $p_e$ от поисковых
+агентов, показывают существенно лучшие результаты.
+Такое отличие достаточно очевидно, но именно для этой системы
+и этих условий
+различие столь существенно.
+В случае плавно изменяющемся параметра различие не столь существенно,
+но при недостаточной чувствительности наилучшие результаты демонстрирует метод $p_{lc}$,
+что довольно неожиданно.
 
-(рис.~\ref{atu:f:fric_v_f_ql3rlWvnAAW_q_dx})
+
+На рис.~\ref{atu:f:fric_v_f_ql3rlWvnAAW_q_dx} представлены зависимости ошибки идентификации
+от коэффициента скорости поиска $v_f$.
+Вид этих зависимостей не проявляет никаких особенностей.
+Для плавно меняющегося параметра выигрыш от смещения агентов достигает 800\%,
+для скачкообразных изменений --- порядка 20--25\%.
 
 \begin{figure}[htb!]
   \centerline{
@@ -273,12 +294,20 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_v_f_sin.png}
   }
-  \caption{Зависимости $\overline{e}(v_f)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$
+  \caption{Зависимости $\overline{e}(v_f)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
    при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_v_f_ql3rlWvnAAW_q_dx}
 \end{figure}
 
-(рис.~\ref{atu:f:fric_k_e_ql3rlWvnAAW_q_dx})
+Зависимости ошибок идентификации от коэффициента $k_e$,
+определяющего равновесное положение агентов
+(рис.~\ref{atu:f:fric_k_e_ql3rlWvnAAW_q_dx}),
+для данной системы наиболее ярко выражены
+при плавном изменении параметра,
+что подчёркивает пользу от динамики агентов.
+Для скачкообразного изменения параметров динамика
+агентов уступает динамике параметра,
+и зависимости выражены слабее.
 
 \begin{figure}[htb!]
   \centerline{
@@ -286,12 +315,20 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_k_e_sin.png}
   }
-  \caption{Зависимости $\overline{e}(k_e)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$
+  \caption{Зависимости $\overline{e}(k_e)$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
    при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_k_e_ql3rlWvnAAW_q_dx}
 \end{figure}
 
-(рис.~\ref{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx})
+Зависимости ошибок от параметра $k_{nl}$
+(рис.~\ref{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}),
+определяющего взаимодействие между агентами,
+при скачкообразных изменениях параметра
+не проявляет существенной зависимости.
+Напротив, для плавно изменяющегося значения параметра
+существует явно выраженный минимум, соответствующий
+балансу между практически свободной динамикой агентов (с учётом ограничений),
+и практически фиксированной сеткой агентов.
 
 \begin{figure}[htb!]
   \centerline{
@@ -299,7 +336,7 @@ $q_\gamma$
     \hfill
     \includegraphics[width=0.49\textwidth]{p/cha/fric/ql3rlWvnAAW/fric_id-p_k_nl_sin.png}
   }
-  \caption{Зависимости $\overline{e}(k_{nl})$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_{dx}$
+  \caption{Зависимости $\overline{e}(k_{nl})$ при идентификации системы (\ref{atu:eq:dryfric_sys}) группой методов ql3rlWvnAAW.$q_\mathrm{dx}$
    при~(\ref{atu:eq:fric_po_t_sign}) и (\ref{atu:eq:fric_po_t_sin})}
   \label{atu:f:fric_k_nl_ql3rlWvnAAW_q_dx}
 \end{figure}
@@ -309,10 +346,33 @@ $q_\gamma$
 
 \subsection{Выводы}  % {{{2
 
-Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
-оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
-оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
-физические принципы, которые для системы с сухим трением, вполне очевидны.
+В целом, результаты моделирования как динамики системы с силой сухого трения,
+и процессов идентификации параметра $f_{dm}$ этой системы,
+позволяют сделать следующие выводы:
+
+\begin{itemize}
+
+  \item
+    Несмотря на то, что система не проявляет в рассматриваемых условиях хаотическую динамику,
+    для идентификации требуется использование специального критерия. Это связано с тем,
+    что рассматриваемая система имеет общее свойство с системами динамического хаоса ---
+    малые изменения параметра или же входного сигнала могут приводить к
+    существенным различиям в динамике.
+
+  \item
+    Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
+    оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
+    оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
+    физические принципы, которые для системы с сухим трением, вполне очевидны.
+
+  \item
+    Зависимости ошибки идентификации от параметров системы идентификации
+    для данной системы выражены достаточно ярко,
+    что связано с отсутствием настоящей хаотической динамики.
+
+\end{itemize}
+
+
 
 % }}}2
 
