Combine Colpitts to separate part

--- a/p5/colp_testsys.tex
+++ b/p5/colp_testsys.tex
@@ -413,4 +413,4 @@ $q_{*}(\mu) $, полученные путём моделирования
 
 % }}}1
 
-% vim: fdm=marker foldlevelstart=3 fdc=4 ft=tex
+% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
