--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -9,7 +9,7 @@
 
 \input{fric_testsys.tex}  % p5/fric_testsys.tex      % good
 
-\input{colp_testsys.tex}  % p5/colp_testsys.tex      % good
+% \input{colp_testsys.tex}  % p5/colp_testsys.tex      % good - moved
 
 
 \input{duff_testsys.tex}  % p5/duff_testsys.tex      % ??
