Small reorder in Collpits chapter

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -245,8 +245,7 @@ $b \in [ 0.02; 4.2 ]$
 % }}}2
 
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Колпитца}  % {{{2
-
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для упрощенной модели системы Колпитца}  % {{{2
 
 
 На рис.~\ref{atu:f:colp_real_xzz}--\ref{atu:f:colp_model_f} представлены как результаты реального эксперимента,
@@ -345,6 +344,7 @@ $q(\mu) $, полученные путём моделирования
 обратные зависимости не дают заметного выигрыша, поэтому выберем
 величину $ q_{x^2}(b) $ в качестве критерия.
 
+% TODO: new name
 В качестве системы идентификации использовалась система с пятью поисковыми агентами и
 двумя неподвижными моделями. Аналогично предыдущим системам,
 для исследования динамических свойств системы идентификации
@@ -412,8 +412,7 @@ $q(\mu) $, полученные путём моделирования
 
 % }}}1
 
-\section{Физическая реализация генератора Колпитца и исследование её динамики} % {{{1
-
+\section{Уточнённая модель генератора Колпитца}  % {{{1
 
 Как уже было отмечено,
 рассмотренная  модель
@@ -425,6 +424,11 @@ $q(\mu) $, полученные путём моделирования
 применение линейной модели для которых или же вообще невозможно (транзистор),
 или же допустимо при определённых условиях (индуктивность).
 
+Методы расчёта~\cite{zaeplnii_radio_calc}.
+
+% }}}1
+
+\section{Физическая реализация генератора Колпитца и исследование её динамики} % {{{1
 
 
 
@@ -591,11 +595,6 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
 
 % }}}1
 
-\section{Численная модель генератора Колпитца}  % {{{1
-
-Методы расчёта~\cite{zaeplnii_radio_calc}.
-
-% }}}1
 
 \section{Анализ и выбор критериев}  % {{{1
 
