Add latexmk support

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -431,7 +431,6 @@ $q(\mu) $, полученные путём моделирования
 \section{Физическая реализация генератора Колпитца и исследование её динамики} % {{{1
 
 
-
 На рис.~\ref{atu:f:colp_schem_real} представлена электрическая схема
 реализации генератора Колпитца, используемая в данной работе.
 Отличия от схемы, используемой в главе \ref{atu:ch:testsys}
@@ -625,7 +624,7 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
 
 % }}}1
 
-\section{Синтез и анализ и системы идентификации}  % {{{1
+\section{Синтез и анализ системы идентификации}  % {{{1
 
 Описание с картинкой.
 
